syntax = "proto3";

message PacketHeader {
    fixed32 total_size = 1;
    fixed32 id = 2;
    fixed32 value = 3;
}

message LoginRequest {
    PacketHeader header = 1;
    string user_id = 2;
    string password = 3;
}


message MoveRequest {
    PacketHeader header = 1;
    int32 pos_x = 2;
    int32 pos_y = 3;
    int32 pos_z = 4;
}


message SendMailRequest {
    PacketHeader header = 1;
    string to_user_id = 2;
    int32 my_pos_x = 3;
    int32 my_pos_y = 4;
    int32 my_pos_z =5;
    string message = 6;
}